option(
  'ios',
  type: 'boolean',
  value: false,
  description: 'target ios devices',
)

option(
  'apps',
  type: 'boolean',
  value : true,
  description: 'build luajit executable',
  yield: true
)

option(
  'icons',
  type: 'boolean',
  value: true,
  description: 'attach icon to luajit app on windows',
  yield: true
)
